<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.ShoeDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/shoeNameLabel"
            style="@style/NewShoeLabel"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/label_shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoeName"
            style="@style/NewShoeEditText"
            android:hint="@string/hint_shoe_name"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/shoeNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/shoeNameLabel" />

        <TextView
            android:id="@+id/companyLabel"
            style="@style/NewShoeLabel"
            android:layout_marginTop="16dp"
            android:text="@string/label_company"
            app:layout_constraintStart_toStartOf="@+id/shoeName"
            app:layout_constraintTop_toBottomOf="@+id/shoeName" />

        <EditText
            android:id="@+id/company"
            style="@style/NewShoeEditText"
            android:hint="@string/hint_company"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/companyLabel"
            app:layout_constraintTop_toBottomOf="@+id/companyLabel" />

        <TextView
            android:id="@+id/shoeSizeLabel"
            style="@style/NewShoeLabel"
            android:layout_marginTop="16dp"
            android:text="@string/label_shoe_size"
            app:layout_constraintStart_toStartOf="@+id/company"
            app:layout_constraintTop_toBottomOf="@+id/company" />

        <EditText
            android:id="@+id/shoeSize"
            style="@style/NewShoeEditText"
            android:hint="@string/hint_shoe_size"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@+id/shoeSizeLabel"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeLabel" />

        <TextView
            android:id="@+id/descriptionLabel"
            style="@style/NewShoeLabel"
            android:layout_marginTop="16dp"
            android:text="@string/label_description"
            app:layout_constraintStart_toStartOf="@+id/shoeSize"
            app:layout_constraintTop_toBottomOf="@+id/shoeSize" />

        <EditText
            android:id="@+id/description"
            style="@style/NewShoeEditText"
            android:hint="@string/hint_description"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/descriptionLabel"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLabel" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/NewShoeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/button_label_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/saveButton"
            style="@style/NewShoeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_label_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintTop_toTopOf="@+id/cancelButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>