<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.WelcomeFragment">

    <!-- Using LinearLayout seems like obvious choice, but I wanted to "clip" "NEXT" button at
    the bottom of the layout. To do that I would have to introduce nested LinearLayout with
    layout_weight="1" and button as a child element, or use RelativeLayout with
    layout_alignParentBottom="true" attribute. Using ConstraintLayout allows me to do what I wanted
    in much easier and cleaner way. -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/welcomeHeader"
            style="@style/OnboardingHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_welcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/welcomeMessage"
            style="@style/OnboardingMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/welcome_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeHeader" />

        <Button
            android:id="@+id/buttonNext"
            style="@style/NextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>